Refined custom styles throughout the app, fixed some layout problems, finished to temporarily deactivate social interactions, styled custom menu.

--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -36,13 +36,11 @@
   }
   h2 {
     width:100%;
-    color:black;
     line-height:1em;
     text-align:center;
       em{
 	  margin-left:10px;
 	  font-style:normal;
-	  color:$light_gray;
 	  font-size:0.8em;
       }
   }
