--- a/app/assets/stylesheets/fragments.css.scss
+++ b/app/assets/stylesheets/fragments.css.scss
@@ -49,6 +49,10 @@
     margin-top:80px;
   }
 }
+
+.choose_from_puzzle_box_container .fragment_summary{
+    width: 265px;
+}
 .fragment_summary{
   margin:0px 0px;
   height:150px;
